bugfix: fixed overlapping  display and corrected font stack

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: linear-gradient(rgb(151, 150, 150), azure);
     color: wheat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
+
 
 button {
     display: flex;
@@ -20,6 +22,8 @@ button {
     font-size: 28px;
     font-family: 'Outfit';
     transition: font-size 0.1s ease;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .operator {
@@ -34,18 +38,16 @@ button {
     background-color: black;
     padding: 20px;
     border-radius: 30px;
-    width: 20%;
+    width: 17%;
 }
 
 .display {
-    text-align: right;
     font-size: 50px;
     font-weight: 100;
-    padding-right: 15px;
     /* margin-top: 120px;
     margin-bottom: 20px; */
-    min-height: 167px; 
-    min-width: 365px; 
+    /* min-height: 167px;
+    min-width: 365px; */
     color: white;
     display: flex;
     justify-content: flex-end;
@@ -53,7 +55,30 @@ button {
 }
 
 .buttons {
-    
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    column-gap: 5px;
+    gap: 5px;
+    justify-content: center;
+}
+
+#operator {
+    background-color: rgb(228, 149, 2);
+}
+
+.buttons>button {
+    width: 75px;
+    height: 75px;
+    border-radius: 100%;
+    color: white;
+    font-size: 32px;
+    border: none;
+    transition-property: filter transform;
+    transition-duration: 0.2s;
+    background-color: rgb(41, 41, 41);
+}
+
+.top {
+    background-color: rgb(88, 88, 88) !important;
 }
